--- a/kitty.conf
+++ b/kitty.conf
@@ -3,6 +3,13 @@ font_size 20.0
 text_composition_strategy legacy
 modify_font cell_width 95%
 
+hide_window_decorations yes
+remember_window_size no
+initial_window_width 1920
+initial_window_height 1054
+
+enable_graphics_buffer yes
+
 shell_integration no-cursor
 enable_audio_bell no
 
@@ -13,7 +20,7 @@ cursor_trail_start_threshold 0
 shell_integration no-cursor
 cursor_trail_decay 0.01 0.15
 cursor_shape block
-cursor_blink_interval -1 linear ease-out
+cursor_blink_interval -1
 
 background #011628
 foreground #c0caf5
